--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hey, Nimesh here!</title>
     <link rel="stylesheet" href="./styles.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+
   </head>
   <body>
     <div id="root">raw-root</div>
+    <script>
+      $(document).ready(function () {
+        $('.nav-links>ul>li>a').click(function (e) {
+          // e.preventDefault();
+          console.log('clicked somewhere');
+          $('.nav-collapse').collapse('hide');
+          $('#collapseDiv').removeClass('active');
+          $(this).addClass('active');
+        });
+
+        // var selector = '.nav-links ul li a';
+
+        // $(selector).on('click', function () {
+        // });
+      });
+    </script>
     <script src="App.js"></script>
   </body>
 </html>
