remove raw-root

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     />
   </head>
   <body>
-    <div id="root">raw-root</div>
+    <div id="root"></div>
     <script>
       $(document).ready(function () {
         $('.nav-links>ul>li>a').click(function (e) {
