--- a/src/index.html
+++ b/src/index.html
@@ -17,24 +17,47 @@
       crossorigin="anonymous"
     />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
-    <link rel="manifest" href="/assets/site.webmanifest">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/site.webmanifest" />
 
-
+    <link rel="manifest" href="/manifest.webmanifest" />
   </head>
   <body>
     <div id="root"></div>
     <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker
+            .register('./pwabuilder-sw.js')
+            .then((reg) => console.log('Success: ', reg.scope))
+            .catch((err) => console.log('Failure: ', err));
+        });
+      }
+
       $(document).ready(function () {
         $('.nav-links>ul>li>a').click(function (e) {
           /* Close Navbar after user clicks on navbar */
           $('#nav-check').prop('checked', false);
 
           /* add active class */
-            $('li a').removeClass('active');
-            $(this).addClass('active');
+          $('li a').removeClass('active');
+          $(this).addClass('active');
           // console.log('clicked on ', this);
         });
       });
